# cfd-io

./: .gitignore  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: downloads.md  formats.md  index.md  installation.md
docs/api/: architecture.md  convert.md  index.md  info.md  read.md  readers.md  write.md  writers.md
docs/user-guide/: api-usage.md  cli.md  index.md  variable-names.md
src/cfd_io/: __init__.py  cli.py  convert_mod.py  dataset.py  info_mod.py  orient.py
src/cfd_io/readers/: __init__.py  _aliases.py  _plot3d_common.py  cgns.py  fortran_binary_direct.py  fortran_binary_sequential.py  hdf5.py  plot3d.py  plot3d_flow.py  plot3d_flow_ascii.py  plot3d_flow_binary.py  plot3d_grid_ascii.py  plot3d_grid_binary.py  su2.py  tecplot_ascii.py  tecplot_binary.py  vtu.py
src/cfd_io/writers/: __init__.py  fortran_binary_direct.py  fortran_binary_sequential.py  hdf5.py  plot3d.py  plot3d_grid_ascii.py  plot3d_grid_binary.py  su2.py  tecplot_ascii.py  tecplot_binary.py
tests/: smoke_test.py  test_cgns.py  test_cli.py  test_errors.py  test_formats.py  test_info.py  test_plt.py  test_su2.py
